--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
       "**/*",
       "media/**/*"
     ],
+    "asarUnpack": [
+      "media/**"
+    ],
     "directories": {
       "buildResources": "media"
     },
