Updating app icons and readme

--- a/package.json
+++ b/package.json
@@ -4,28 +4,36 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "dotenv electron-builder"
   },
   "devDependencies": {
     "electron": "^30.0.0",
     "electron-builder": "^24.6.0",
-    "electron-notarize": "^2.1.0"
+    "@electron/notarize": "^2.2.0",
+    "dotenv-cli": "^4.0.0"
   },
   "dependencies": {
     "ffmpeg-static": "^5.1.0",
     "electron-is-dev": "^1.2.0"
   },
   "build": {
-    "afterSign": "./notarize.js",
     "appId": "com.lachlanpearce.workout",
     "productName": "Workout Generator",
     "files": [
       "**/*",
-      "media/**/*"
+      "!media/**/*"
     ],
     "asarUnpack": [
-      "media/**",
       "node_modules/ffmpeg-static/**"
+    ],
+    "extraResources": [
+      {
+        "from": "media",
+        "to": "app.asar.unpacked/media",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "directories": {
       "buildResources": "media"
@@ -34,11 +42,11 @@
       "target": [
         "nsis"
       ],
-      "icon": "media/icon/icon.ico"
+      "icon": "media/icon/windows/app.ico"
     },
     "mac": {
       "category": "public.app-category.utilities",
-      "icon": "media/icon/icon.icns",
+      "icon": "media/icon/apple/app.icns",
       "entitlements": "info.plist",
       "entitlementsInherit": "info.inherit.plist",
       "hardenedRuntime": true,
@@ -58,7 +66,7 @@
         "AppImage",
         "deb"
       ],
-      "icon": "media/icon/icon.png"
+      "icon": "media/icon/windows.png"
     }
   }
 }
