--- a/info.plist
+++ b/info.plist
@@ -6,7 +6,7 @@
     <true/>
     <key>com.apple.security.application-groups</key>
     <array>
-      <string>WZBK9DUUWK.com.lachlanpearce.dronesurveyor.desktop</string>
+      <string>WZBK9DUUWK.com.lachlanpearce.workout</string>
     </array>
     <key>com.apple.security.network.client</key>
     <true/>
