--- a/manifest.json
+++ b/manifest.json
@@ -8,52 +8,52 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "media/icon/favicon-32.png",
+      "src": "media/icon/windows/favicon-32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-57.png",
+      "src": "media/icon/windows/favicon-57.png",
       "sizes": "57x57",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-72.png",
+      "src": "media/icon/windows/favicon-72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-96.png",
+      "src": "media/icon/windows/favicon-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-120.png",
+      "src": "media/icon/windows/favicon-120.png",
       "sizes": "120x120",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-128.png",
+      "src": "media/icon/windows/favicon-128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-144.png",
+      "src": "media/icon/windows/favicon-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-152.png",
+      "src": "media/icon/windows/favicon-152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-195.png",
+      "src": "media/icon/windows/favicon-195.png",
       "sizes": "195x195",
       "type": "image/png"
     },
     {
-      "src": "media/icon/favicon-228.png",
+      "src": "media/icon/windows/favicon-228.png",
       "sizes": "228x228",
       "type": "image/png"
     }
