Update readme + package.json

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
         "arch": [
           "universal"
         ]
-      }
+      },
+      "notarize": "./notarize.js"
     },
     "dmg": {
       "sign": false
