--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "dotenv electron-builder"
+    "build": "dotenv electron-builder",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@electron/notarize": "^2.2.0",
+    "dotenv-cli": "^4.0.0",
     "electron": "^30.0.0",
     "electron-builder": "^24.6.0",
-    "@electron/notarize": "^2.2.0",
-    "dotenv-cli": "^4.0.0"
+    "jest": "^30.0.5"
   },
   "dependencies": {
-    "ffmpeg-static": "^5.1.0",
-    "electron-is-dev": "^1.2.0"
+    "electron-is-dev": "^1.2.0",
+    "ffmpeg-static": "^5.1.0"
   },
   "build": {
     "appId": "com.lachlanpearce.wurqit",
