--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -43,7 +48,7 @@ jobs:
     - name: Upload badge to `gh-pages`
       uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.TEST_COVERAGE_TOKEN }}
         publish_branch: gh-pages
         publish_dir: .badge
         destination_dir: badges  # /badges/coverage.json
