--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,18 +37,57 @@ jobs:
     - name: List coverage directory
       run: ls -R coverage || echo "No coverage directory"
     
-    - name: Extract coverage percent
+    - name: Extract coverage percent and generate badge
       run: |
         if [ -f coverage/coverage-summary.json ]; then
-          node -e "const fs = require('fs'); const summary = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf-8')); const pct = summary.total.statements.pct; const badge = { schemaVersion: 1, label: 'coverage', message: `${pct}%`, color: pct > 90 ? 'brightgreen' : pct > 75 ? 'yellow' : 'red' }; fs.mkdirSync('.badge', { recursive: true }); fs.writeFileSync('.badge/coverage.json', JSON.stringify(badge));"
+          # Extract coverage percentage from JSON summary
+          PCT=$(node -e "
+            const fs = require('fs');
+            const summary = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf-8'));
+            const pct = Math.round(summary.total.statements.pct);
+            console.log(pct);
+          ")
+          
+          # Determine badge color
+          if [ $PCT -ge 90 ]; then
+            COLOR="brightgreen"
+          elif [ $PCT -ge 75 ]; then
+            COLOR="yellow"
+          else
+            COLOR="red"
+          fi
+          
+          # Create badge JSON
+          mkdir -p .badge
+          cat > .badge/coverage.json << EOF
+          {
+            "schemaVersion": 1,
+            "label": "coverage",
+            "message": "${PCT}%",
+            "color": "${COLOR}",
+            "namedLogo": "jest"
+          }
+          EOF
+          
+          echo "Generated coverage badge: ${PCT}% (${COLOR})"
         else
-          echo 'No coverage summary found, skipping badge generation.'
+          echo 'No coverage summary found, creating default badge.'
+          mkdir -p .badge
+          cat > .badge/coverage.json << EOF
+          {
+            "schemaVersion": 1,
+            "label": "coverage",
+            "message": "unknown",
+            "color": "lightgrey"
+          }
+          EOF
         fi
 
-    - name: Upload badge to `gh-pages`
+    - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
+      if: github.ref == 'refs/heads/main'
       with:
-        github_token: ${{ secrets.TEST_COVERAGE_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: .badge
-        destination_dir: badges  # /badges/coverage.json
+        destination_dir: badges
