--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "wurqit",
   "version": "1.0.2",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
+    "build:ts": "tsc",
+    "build:ts:watch": "tsc --watch",
+    "start": "yarn build:ts && electron .",
+    "dev": "yarn build:ts && electron .",
     "test-start": "electron test-build.js",
-    "build": "dotenv electron-builder",
+    "build": "yarn build:ts && dotenv electron-builder",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
     "@electron/notarize": "^2.2.0",
+    "@types/node": "^18.19.0",
     "dotenv-cli": "^4.0.0",
     "electron": "^28.2.0",
     "electron-builder": "^26.0.12",
-    "jest": "^30.0.5"
+    "jest": "^30.0.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@electron/remote": "2.1.3",
     "electron-is-dev": "^1.2.0",
     "ffmpeg-static": "^5.1.0"
   },
