--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@electron/notarize": "^2.2.0",
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.19.0",
     "dotenv-cli": "^4.0.0",
     "electron": "^28.2.0",
     "electron-builder": "^26.0.12",
-    "jest": "^30.0.5",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.9.5"
   },
   "dependencies": {
